--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server":"node server.js"
+    "server": "node server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.16.4",
-    "mysql2": "^3.3.2"
+    "mysql2": "^3.3.2",
+    "uuid": "^9.0.0"
   }
 }
